lesson-4/4/04-acme-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  namespace: demo-ns
spec:
  tls:
  - hosts:
    - k-101.app.nrk.me.uk
    secretName: echo-tls
  rules:
  - host: k-101.app.nrk.me.uk
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
